<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/md_blue_100"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:text="@string/tv_take_a_picture"
                android:textColor="@color/md_blue_800"
                android:textSize="18sp"
                android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/tv_title"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btn_open_camera" />

                <ImageView
                    android:id="@+id/iv_picture_view"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_below="@+id/btn_camera"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/iv_press_the_button_to_take_a_picture" />

        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.CardView>